syntax = "proto3";

package elastic.apm.v1;

option go_package = "/modelpb";

message Device {
  string id = 1;
  DeviceModel model = 2;
  string manufacturer = 3;
}

message DeviceModel {
  string name = 1;
  string identifier = 2;
}
