syntax = "proto3";

package elastic.apm.v1;

option go_package = "/modelpb";
option optimize_for = SPEED;

message UserExperience {
  double cumulative_layout_shift = 1;
  double first_input_delay = 2;
  double total_blocking_time = 3;
  LongtaskMetrics long_task = 4;
}

message LongtaskMetrics {
  int64 count = 1;
  double sum = 2;
  double max = 3;
}
