syntax = "proto3";

package elastic.apm.v1;

option go_package = "/modelpb";
option optimize_for = SPEED;

message LabelValue {
  string value = 1;
  repeated string values = 2;
  bool global = 3;
}

message NumericLabelValue {
  double value = 1;
  repeated double values = 2;
  bool global = 3;
}
