syntax = "proto3";

package elastic.apm.v1;

option go_package = "/modelpb";
option optimize_for = SPEED;

message Process {
  optional uint32 ppid = 1;
  ProcessThread thread = 2;
  string title = 3;
  string command_line = 4;
  string executable = 5;
  repeated string argv = 6;
  uint32 pid = 7;
}

message ProcessThread {
  string name = 1;
  int32 id = 2;
}
