syntax = "proto3";

package elastic.apm.v1;

option go_package = "github.com/elastic/apm-data/model/modelpb";

message Service {
  ServiceOrigin origin = 1;
  ServiceTarget target = 2;
  Language language = 3;
  Runtime runtime = 4;
  Framework framework = 5;
  string name = 6;
  string version = 7;
  string environment = 8;
  ServiceNode node = 9;
}

message ServiceOrigin {
  string id = 1;
  string name = 2;
  string version = 3;
}

message ServiceTarget {
  string name = 1;
  string type = 2;
}

message Language {
  string name = 1;
  string version = 2;
}

message Runtime {
  string name = 1;
  string version = 2;
}

message Framework {
  string name = 1;
  string version = 2;
}

message ServiceNode {
  string name = 1;
}
