syntax = "proto3";

package elastic.apm.v1;

import "experience.proto";
import "google/protobuf/struct.proto";
import "message.proto";
import "metricset.proto";

option go_package = "/modelpb";
option optimize_for = SPEED;

message Transaction {
  SpanCount span_count = 1;
  optional UserExperience user_experience = 2;
  google.protobuf.Struct custom = 3;
  map<string, TransactionMark> marks = 4;
  optional Message message = 5;
  string type = 6;
  string name = 7;
  string result = 8;
  string id = 9;
  Histogram duration_histogram = 10;
  repeated DroppedSpanStats dropped_spans_stats = 11;
  SummaryMetric duration_summary = 12;
  double representative_count = 13;
  bool sampled = 14;
  bool root = 15;
}

message SpanCount {
  optional int64 dropped = 1;
  optional int64 started = 2;
}

message TransactionMark {
  map<string, double> measurements = 1;
}

message DroppedSpanStats {
  string destination_service_resource = 1;
  string service_target_type = 2;
  string service_target_name = 3;
  string outcome = 4;
  AggregatedDuration duration = 5;
}
